# tmbasic

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DEPENDENCIES.md  DEVELOPERS.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  dev-build.sh  dev-clean.sh  dev-format.sh  dev-lint.sh  dev-run-valgrind.sh  dev-test-callgrind.sh  dev-test.sh  make-ghpages.sh  make-help.sh  make-license.sh  make-release.sh  test.bas
.cursor/rules/: add-new-system-call.mdc  global.mdc  tmbasic-language.mdc
.github/workflows/: build-environments.yaml  linux-runners.yaml  linux-sysroots.yaml  linux-system-roots.yaml  tmbasic.yaml
art/favicon/: site.webmanifest
doc/: .gitignore  build-doc.js  building-from-source.md  insert-cp437-diagram.c  maintainer-instructions.md  third-party-libraries.md
doc/art/: icon.icns
doc/diagrams/: aboutWindow.txt  palettes.txt
doc/html/: page-template-1.html  page-template-2.html  page-template.html  style.css
doc/licenses/: README.md
doc/procedures/: AvailableLocales.txt  AvailableTimeZones.txt  Characters.txt  Chr.txt  DateFromParts.txt  DateTimeFromParts.txt  DateTimeOffsetFromParts.txt  Days.txt  GraphemeClusters.txt  HasValue.txt  Hours.txt  Len.txt  Milliseconds.txt  Minutes.txt  Seconds.txt  TotalDays.txt  TotalHours.txt  TotalMilliseconds.txt  TotalMinutes.txt  TotalSeconds.txt  UtcOffset.txt  Value.txt  availableLocales.txt  chr.txt  graphemeClusters.txt  hasValue.txt  len.txt
doc/topics/: basic.txt  basicReference.txt  cheat.txt  cheatSheet.txt  doc.txt  ide.txt  ide_editorWindow.txt  ide_insertColorDialog.txt  ide_programWindow.txt  license.txt  license_boost.txt  license_bsdiff.txt  license_glibc.txt  license_icu.txt  license_immer.txt  license_libclipboard.txt  license_libstdcxx1.txt  license_libstdcxx2.txt  license_libstdcxx3.txt  license_libxcb.txt  license_mpdecimal.txt  license_musl.txt  license_nameof.txt  license_ncurses.txt  license_notoserif.txt  license_opensans.txt  license_oxygenmono.txt  license_tmbasic.txt  license_tvision.txt  ref.txt  ref_algebraic.txt  ref_and.txt  ref_comparison.txt  ref_errors.txt  ref_grammar.txt  ref_if.txt  ref_logical.txt  ref_not.txt  ref_or.txt  ref_while.txt  (+19 more)
examples/: tictactoe.bas
ext/: README.md
ext/bsdiff/: LICENSE
ext/elftoolchain/: LICENSE.txt
ext/gcc/: copyright  copyright1  copyright2
ext/libarchive/: LICENSE.archive_read_support_filter_compress.txt  LICENSE.archive_write_add_filter_compress.txt  LICENSE.mtree.txt
ext/mpdecimal/: CHANGELOG.txt  COMPILERS.txt  INSTALL.txt  Makefile.in  configure.REMOVED.git-id  configure.ac  mpdecimal-2.5.0.tar.gz.REMOVED.git-id
ext/mpdecimal/doc/: LICENSE.txt
ext/mpdecimal/doc/libmpdec/: arithmetic.html.REMOVED.git-id
ext/mpdecimal/doc/libmpdec++/: decimal.html.REMOVED.git-id
ext/mpdecimal/doc/libmpdec++/_static/: jquery-3.4.1.js.REMOVED.git-id
ext/mpdecimal/libmpdec/: Makefile.in  Makefile.vc  README.txt  bench.c  bench_full.c  mpdecimal.c.REMOVED.git-id  mpdecimal.h.in  mpdecimal32vc.h  mpdecimal64vc.h
ext/mpdecimal/libmpdec++/: Makefile.in  Makefile.vc  bench.cc  bench_full.cc  decimal.cc
ext/mpdecimal/libmpdec++/examples/: factorial.cc  pi.cc
ext/mpdecimal/tests/: Makefile.in  Makefile.vc  gettests.bat  malloc_fail.c  malloc_fail.h  runshort.sh  runshort_alloc.sh  runtest.c.REMOVED.git-id
ext/mpdecimal/tests++/: Makefile.in  Makefile.vc  apitest.cc  common.hh  gettests.sh  malloc_fail.cc  malloc_fail.hh  runshort.sh  runshort_alloc.sh  runtest.cc  vctest.hh
ext/mpdecimal/tests++/compile_tests/: check_conversions.py
ext/mpdecimal/tests/testdata_dist/: baseconv.decTest.REMOVED.git-id  binop_eq.decTest.REMOVED.git-id  cov.decTest.REMOVED.git-id  divmod.decTest.REMOVED.git-id  divmod_eq.decTest.REMOVED.git-id  fma_eq.decTest.REMOVED.git-id  format.decTest.REMOVED.git-id  largeint.decTest.REMOVED.git-id  maxprec.decTest  powmod_eq.decTest  shiftlr.decTest.REMOVED.git-id
ext/mpdecimal/vcbuild/: README.txt  pgobuild32.bat  pgobuild64.bat  runshort.bat  runshort_alloc.bat  vcbuild32.bat  vcbuild64.bat  vcclean.bat  vcdistclean.bat
ext/musl/: COPYRIGHT
ext/ncurses/: mingw-w64-x86_64-ncurses-6.2-2-any.pkg.tar.zst.REMOVED.git-id
ext/notoserif/: DESCRIPTION.en_us.html  METADATA.pb  OFL.txt
ext/opensans/: METADATA.pb
ext/oxygenmono/: METADATA.pb  OFL.txt
ext/tvision/: CMakeLists.txt  hello.cpp  tvision-r586.zip.REMOVED.git-id
scripts/: callgrind-test.sh  clean.sh  format.sh  lint.sh  make-all.sh  make-ghpages.sh  make-help.sh  make-license.sh  make-tmbasic.sh  prompt.sh  test.sh  tidy.sh  valgrind-run.sh
src/: .clang-format  .clang-tidy  CPPLINT.cfg  buildDoc.cpp  common.h  main.cpp  valgrind-suppressions.supp
src/app/: App.cpp  App.h  main.cpp  tvision.h
src/boost/: README
src/cli/: main.c
src/compiler/: BuiltInConstantList.cpp  BuiltInConstantList.h  BuiltInProcedureList.cpp  BuiltInProcedureList.h  BuiltInRecordTypesList.cpp  CompiledProgram.cpp  CompiledProgram.h  CompilerException.h  CompilerResult.cpp  CompilerResult.h  ParserResult.cpp  ParserResult.h  Publisher.cpp  Publisher.h  Scanner.cpp  Scanner.h  SourceProgram.cpp  SourceProgram.h  SymbolScope.cpp  SymbolScope.h  TargetPlatform.cpp  TargetPlatform.h  Token.cpp  Token.h  TokenKind.h  ast.cpp  ast.h  bindNamedRecordTypes.cpp  bindNamedRecordTypes.h  bindNamedTypes.cpp  bindNamedTypes.h  bindProcedureSymbols.cpp  bindProcedureSymbols.h  bindYieldStatements.cpp  bindYieldStatements.h  checkMissingReturns.cpp  checkMissingReturns.h  checkRecursiveTypes.cpp  checkRecursiveTypes.h  compile.cpp  (+43 more)
src/runner/: main.cpp
src/shared/: Button.cpp  Button.h  CheckBoxes.cpp  CheckBoxes.h  DialogPtr.h  Editor.cpp  Editor.h  Error.cpp  Error.h  ExecutablePatcher.cpp  ExecutablePatcher.h  Frame.cpp  Frame.h  InputLine.cpp  InputLine.h  Label.cpp  Label.h  ListViewer.cpp  ListViewer.h  ObjectType.h  Opcode.h  PictureView.cpp  PictureView.h  ScrollBar.cpp  ScrollBar.h  StatusLine.cpp  StatusLine.h  SystemCalls.h  ThinButton.cpp  ThinButton.h  UserControl.h  UserForm.h  ViewPtr.h  WindowPtr.h  cast.h  console.cpp  (+21 more)
(+1521 files in other folders)
